src/test/ui/parser/trailing-plus-in-bounds.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/trailing-plus-in-bounds.rs:19:1
   |
LL | FAIL
   | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

